Renamed "Articles" with "Examples"

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -12,9 +12,9 @@ horizontalnav:
 - title: Reference
   path: /reference/reference-overview.html
   node: Reference
-- title: Articles
-  path: /articles/articles-overview.html
-  node: Articles
+- title: Examples
+  path: /examples/examples-overview.html
+  node: Examples
 
 home: {}
 
@@ -2839,37 +2839,37 @@ Mobile:
     path: /reference/monarch-fx/amfUnderstandingUploaders.html
 
 ##
-Articles:
-- sectiontitle: ASNA Articles
-  sectionpath: /articles/articles-overview.html
+Examples:
+- sectiontitle: ASNA Examples
+  sectionpath: /examples/examples-overview.html
   section:
   - title: ASNA Site Articles
     path: https://www.asna.com/us/articles
   - sectiontitle: How-to Techniques
-    sectionpath: /articles/how-to-techniques.html
+    sectionpath: /examples/show-to-techniques.html
     section:
     - title: SQL Parser Explorer
-      path: /articles/sql-parser-explorer.html
+      path: /examples/sql-parser-explorer.html
     - title: Zebra Stripe Subfiles
-      path: /articles/zebra-stripe-subfiles.html
-  - sectiontitle: Enhancing SunFarm Migration 
-    sectionpath: /articles/sunfarm/sunfarm.html
+      path: /examples/zebra-stripe-subfiles.html
+  - sectiontitle: Enhancing User Interface 
+    sectionpath: /examples/sunfarm/sunfarm.html
     section:
     - title: Remove Reverse Video
-      path: /articles/sunfarm/enhance-remove-reverse-video.html
+      path: /examples/sunfarm/enhance-remove-reverse-video.html
     - title: Application Logo Branding
-      path: /articles/sunfarm/enhance-logo-branding.html
+      path: /examples/sunfarm/enhance-logo-branding.html
     - title: Modernize Font Appearance
-      path: /articles/sunfarm/enhance-modernize-font-appearance.html
+      path: /examples/sunfarm/enhance-modernize-font-appearance.html
     - title: Remove Redundant Elements
-      path: /articles/sunfarm/enhance-remove-redundant-elements.html
+      path: /examples/sunfarm/enhance-remove-redundant-elements.html
     - title: Replacing YES/NO fields with Check-boxes
-      path: /articles/sunfarm/enhance-replace-yesno-checkboxes.html
+      path: /examples/sunfarm/enhance-replace-yesno-checkboxes.html
     - title: Replacing Multiple selection fields with Radio-button Groups
-      path: /articles/sunfarm/enhance-replace-yesno-radio-groups.html
+      path: /examples/sunfarm/enhance-replace-yesno-radio-groups.html
     - title: Replacing Promptable fields by clickable icon
-      path: /articles/sunfarm/enhance-prompts-clickable-icon.html
+      path: /examples/sunfarm/enhance-prompts-clickable-icon.html
     - title: Replacing numeric Data points with a Chart
-      path: /articles/sunfarm/enhance-replace-data-with-chart.html
+      path: /examples/sunfarm/enhance-replace-data-with-chart.html
 
                                                                                           
